feat: get movie list service, hotfix sign up , otp.